<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<!--    <item-->
<!--        android:id="@+id/item1"-->
<!--        android:icon="@android:drawable/arrow_down_float"-->
<!--        android:onClick="onComposeAction"-->
<!--        android:title="Compose"-->
<!--        app:showAsAction="ifRoom" />-->
    <item
        android:id="@+id/list"
        android:title="@string/list"
        app:showAsAction="never"/>
    <item
        android:id="@+id/grid"
        android:title="@string/grid"
        app:showAsAction="never"/>
    <item
        android:id="@+id/CardView"
        android:title="@string/cardview"
        app:showAsAction="never"/>
    <item
        android:id="@+id/about"
        android:title="@string/aboutme"
        app:showAsAction="never"/>
</menu>