<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:padding="8dp">

        <ImageView
            android:id="@+id/img_cardview"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_marginBottom="4dp" />

        <TextView
            android:id="@+id/tv_cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/img_cardview"
            android:layout_toRightOf="@id/img_cardview"
            android:text="@string/nama_hp"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_cardview_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/btn_layout"
            android:layout_below="@id/tv_cardview"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_toEndOf="@id/img_cardview"
            android:layout_toRightOf="@id/img_cardview"
            android:ellipsize="end"
            android:maxLines="5"
            android:text="@string/detail" />

        <LinearLayout
            android:id="@+id/btn_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_toEndOf="@id/img_cardview"
            android:layout_toRightOf="@id/img_cardview"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_fav"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/favorite"
                android:textSize="12sp"
                android:background="@drawable/button_shape"/>

            <Button
                android:id="@+id/btn_share"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/share"
                android:textSize="12sp"
                android:background="@drawable/button_shape"/>
        </LinearLayout>
    </RelativeLayout>

</androidx.cardview.widget.CardView>